@@ -5,6 +5,7 @@ Changes for templates:
 	* The template and script version is now recorded in a GPRINT (issue 79).
 	* Restored unflushed_log, which was accidentally deleted in 1.1.3.
 	* Added the InnoDB Checkpoint Age graph (issue 73).
+	* Added the InnoDB Insert Buffer Usage graph (issue 74).
 	* Added the InnoDB Active/Locked Transactions graph.
 	* Added the InnoDB Memory Allocation graph.
 	* Added the InnoDB Adaptive Hash Index graph.
